# Gutenberg-Stacks

./: .gitignore  CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: design.md
pipeline/: pyproject.toml
pipeline/src/gutenberg_galaxy/: enrich.py  excerpts.py  export.py  layout.py
pipeline/tests/: test_enrich.py  test_excerpts.py  test_export.py
pipeline/tests/fixtures/: pg_text.txt
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: card.ts  filters.test.ts  filters.ts  grid.ts  main.ts  map.ts  meta.ts  recent.test.ts  recent.ts  search.test.ts  search.ts  similar.test.ts  similar.ts  stacks.test.ts  stacks.ts  style.css  types.ts  url.test.ts  url.ts  views.ts
