[project]
name = "gutenberg-galaxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "TMFNK", email = "tmfnk7@gmail.com" }
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "hdbscan>=0.8.44",
    "httpx>=0.28.1",
    "numba>=0.60",
    "numpy>=1.26",
    "pydantic>=2.13.4",
    "sentence-transformers>=5.6.0",
    "umap-learn>=0.5.12",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "respx>=0.23.1",
]
